added null check for use as a debugging break point to check #46 in TripGenCalculatorMEL.java